HW4 - Final update

--- a/HW4.html
+++ b/HW4.html
@@ -4444,8 +4444,8 @@ addPopups(lat = 41.390205, lng = 2.154007, barcelona, options = popupOptions(clo
 addPopups(lat = 43.263013, lng = -2.934985, bilbao, options = popupOptions(closeButton = FALSE)) %&gt;%
 
 addPopups(lat = 39.466667, lng = -0.375000, valencia, options = popupOptions(closeButton = FALSE))</code></pre>
-<div class="leaflet html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-4758508dc8b65db8395d" style="width:672px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-4758508dc8b65db8395d">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"setView":[[41.649693,-0.887712],7,[]],"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"https://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircleMarkers","args":[40.416775,-3.70379,35,null,null,{"interactive":true,"className":"","stroke":true,"color":"#03F","weight":5,"opacity":0.5,"fill":true,"fillColor":"#03F","fillOpacity":0.2},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addCircleMarkers","args":[41.390205,2.154007,26,null,null,{"interactive":true,"className":"","stroke":true,"color":"#03F","weight":5,"opacity":0.5,"fill":true,"fillColor":"#03F","fillOpacity":0.2},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addCircleMarkers","args":[40.416775,-3.70379,11,null,null,{"interactive":true,"className":"","stroke":true,"color":"#03F","weight":5,"opacity":0.5,"fill":true,"fillColor":"#03F","fillOpacity":0.2},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addCircleMarkers","args":[43.263012,-2.934985,8,null,null,{"interactive":true,"className":"","stroke":true,"color":"#03F","weight":5,"opacity":0.5,"fill":true,"fillColor":"#03F","fillOpacity":0.2},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addCircleMarkers","args":[39.466667,-0.375,6,null,null,{"interactive":true,"className":"","stroke":true,"color":"#03F","weight":5,"opacity":0.5,"fill":true,"fillColor":"#03F","fillOpacity":0.2},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addPopups","args":[40.416775,-3.70379,"<b> Real Madrid <\/b><br/>35<br/><b> Atletico Madrid <\/b><br/>11",null,null,{"maxWidth":300,"minWidth":50,"autoPan":true,"keepInView":false,"closeButton":false,"className":""}]},{"method":"addPopups","args":[41.390205,2.154007,"<b> FC Barcelona <\/b><br/>26",null,null,{"maxWidth":300,"minWidth":50,"autoPan":true,"keepInView":false,"closeButton":false,"className":""}]},{"method":"addPopups","args":[43.263013,-2.934985,"<b> Athletic Bilbao <\/b><br/>8",null,null,{"maxWidth":300,"minWidth":50,"autoPan":true,"keepInView":false,"closeButton":false,"className":""}]},{"method":"addPopups","args":[39.466667,-0.375,"<b> Valencia <\/b><br/>6",null,null,{"maxWidth":300,"minWidth":50,"autoPan":true,"keepInView":false,"closeButton":false,"className":""}]}],"limits":{"lat":[39.466667,43.263013],"lng":[-3.70379,2.154007]}},"evals":[],"jsHooks":[]}</script>
+<div class="leaflet html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-cc0680aff1ef29593874" style="width:672px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-cc0680aff1ef29593874">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"setView":[[41.649693,-0.887712],7,[]],"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"https://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircleMarkers","args":[40.416775,-3.70379,35,null,null,{"interactive":true,"className":"","stroke":true,"color":"#03F","weight":5,"opacity":0.5,"fill":true,"fillColor":"#03F","fillOpacity":0.2},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addCircleMarkers","args":[41.390205,2.154007,26,null,null,{"interactive":true,"className":"","stroke":true,"color":"#03F","weight":5,"opacity":0.5,"fill":true,"fillColor":"#03F","fillOpacity":0.2},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addCircleMarkers","args":[40.416775,-3.70379,11,null,null,{"interactive":true,"className":"","stroke":true,"color":"#03F","weight":5,"opacity":0.5,"fill":true,"fillColor":"#03F","fillOpacity":0.2},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addCircleMarkers","args":[43.263012,-2.934985,8,null,null,{"interactive":true,"className":"","stroke":true,"color":"#03F","weight":5,"opacity":0.5,"fill":true,"fillColor":"#03F","fillOpacity":0.2},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addCircleMarkers","args":[39.466667,-0.375,6,null,null,{"interactive":true,"className":"","stroke":true,"color":"#03F","weight":5,"opacity":0.5,"fill":true,"fillColor":"#03F","fillOpacity":0.2},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addPopups","args":[40.416775,-3.70379,"<b> Real Madrid <\/b><br/>35<br/><b> Atletico Madrid <\/b><br/>11",null,null,{"maxWidth":300,"minWidth":50,"autoPan":true,"keepInView":false,"closeButton":false,"className":""}]},{"method":"addPopups","args":[41.390205,2.154007,"<b> FC Barcelona <\/b><br/>26",null,null,{"maxWidth":300,"minWidth":50,"autoPan":true,"keepInView":false,"closeButton":false,"className":""}]},{"method":"addPopups","args":[43.263013,-2.934985,"<b> Athletic Bilbao <\/b><br/>8",null,null,{"maxWidth":300,"minWidth":50,"autoPan":true,"keepInView":false,"closeButton":false,"className":""}]},{"method":"addPopups","args":[39.466667,-0.375,"<b> Valencia <\/b><br/>6",null,null,{"maxWidth":300,"minWidth":50,"autoPan":true,"keepInView":false,"closeButton":false,"className":""}]}],"limits":{"lat":[39.466667,43.263013],"lng":[-3.70379,2.154007]}},"evals":[],"jsHooks":[]}</script>
 </div>
 <div id="exercise-2" class="section level1">
 <h1>Exercise 2</h1>
@@ -4488,22 +4488,23 @@ find_pi(B = 100000, make_plot = FALSE)</code></pre>
 </div>
 <div id="exercise-3" class="section level1">
 <h1>Exercise 3</h1>
-<pre class="r"><code>get_position &lt;- function(d) {
-  
-  # Define the coordinates of the satellites
-  x &lt;- c(-300, 300, 0)
-  y &lt;- c(300, 300, -300)
-  
-  # Define the objective function for the least-square adjustment
-  obj_fun &lt;- function(theta, d, x, y) {
-    x0 &lt;- theta[1]
-    y0 &lt;- theta[2]
-    epsilon &lt;- theta[3]
-    (x - x0)^2 + (y - y0)^2 - (d - epsilon)^2
-  }
-  
+<pre class="r"><code># Define the coordinates of the satellites
+x &lt;- c(-300, 300, 0)
+y &lt;- c(300, 300, -300)
+
+# Define the objective function for the least-square adjustment
+obj_fun &lt;- function(theta, d, x, y) {
+  x0 &lt;- theta[1]
+  y0 &lt;- theta[2]
+  epsilon &lt;- theta[3]
+  d_sq &lt;- theta[4]
+  (x - x0)^2 + (y - y0)^2 - (d_sq - epsilon)^2
+}
+
+# Define the GNSS function for performing the optimization
+GNSS &lt;- function(d) {
   # Perform the optimization using the objective function
-  result &lt;- optim(c(0, 0, 0), obj_fun, d = d, x = x, y = y)
+  result &lt;- optim(c(0, 0, 0, mean(d)), obj_fun, d = d, x = x, y = y)
   
   # Extract the estimated parameters
   x0 &lt;- result$par[1]
@@ -4515,15 +4516,12 @@ find_pi(B = 100000, make_plot = FALSE)</code></pre>
   class(res) &lt;- &quot;GNSS&quot;
   res
 }
-GNSS &lt;- function(x0, y0, epsilon) {
-  res &lt;- list(x0 = x0, y0 = y0, epsilon = epsilon)
-  class(res) &lt;- &quot;GNSS&quot;
-  res
-}
 
+# Define the plot function for GNSS objects
 plot.GNSS &lt;- function(x, ...) {
   x0 &lt;- x$x0
   y0 &lt;- x$y0
+  epsilon &lt;- x$epsilon
   plot(c(-500, 500), c(-500, 500), type = &quot;n&quot;, xlab = &quot;x&quot;, ylab = &quot;y&quot;)
   text(x0, y0, &quot;Receiver&quot;, pos = 3)
   text(-300, 300, &quot;Satellite 1&quot;, pos = 3)
@@ -4532,8 +4530,8 @@ plot.GNSS &lt;- function(x, ...) {
   segments(x0, y0, -300, 300, lty = 2)
   segments(x0, y0, 300, 300, lty = 2)
   segments(x0, y0, 0, -300, lty = 2)
-  arrows(x0, y0, x0 + 100*cos(seq(0, 2*pi, length.out = 101)),
-         y0 + 100*sin(seq(0, 2*pi, length.out = 101)), length = 0.1, col = &quot;gray&quot;)
+  arrows(x0, y0, x0 + 100*cos(theta),
+         y0 + 100*sin(theta), length = 0.1, col = &quot;gray&quot;)
   legend(&quot;topleft&quot;, legend = &quot;Error ellipse&quot;, lty = 1, bty = &quot;n&quot;, col = &quot;gray&quot;)
   theta &lt;- seq(0, 2*pi, length.out = 101)
 }</code></pre>
